tests/miz/pass/types/pass_type_elaboration_multiple_reserve_declaration_membership_001.miz
reserve x for set;
reserve y for set;
theorem MultipleReserveDeclarationMembershipPayloadBoundary: x in y;
