tests/miz/fail/substitution/fail_substitution_capture_001.miz
scheme Capture {
  P[set]
}:
  for x being set holds P[x]
provided
  for y being set holds P[x];
